Add dark mode feature with toggle button

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><button id="theme-toggle">Theme</button></li>
             </ul>
         </nav>
     </header>
